@@ -228,13 +228,16 @@ include_once('include/page_header.php');
 			if(isset($visible['groups'])){
 				$hosts['groups'] = array_merge(zbx_toObject($_REQUEST['groups'], 'groupid'), $groups);
 			}
-			if(isset($visible['template_table'])){
-				$tplids = array_keys($_REQUEST['templates']);
-				$hosts['templates'] = zbx_toObject($tplids, 'templateid');
-			}
 			$result = CHost::massUpdate(array_merge($hosts, $new_values));
 			if($result === false) throw new Exception();
 
+			
+			if(isset($visible['template_table'])){
+				$tplids = array_keys($_REQUEST['templates']);
+				$result = CHost::massAdd(array('hosts' => $hosts['hosts'], 'templates' => zbx_toObject($tplids, 'templateid')));
+				if($result === false) throw new Exception();
+			}
+			
 
 			if($result && isset($visible['useprofile'])){
 				$host_profile = DBfetch(DBselect('SELECT * FROM hosts_profiles WHERE hostid='.$hostid));
